--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,17 @@
 {
-	"name":         "asinkastudio/php-user-agent-generator",
-	"type":         "library",
-	"description":  "PHP User-agent generator",
-	"homepage":     "https://github.com/AsinkaStudio/php-user-agent-generator",
-	"version":      "0.0.1",
-	"authors":      [
+	"name":        "asinka-studio/php-user-agent-generator",
+	"type":        "library",
+	"license":     "MIT",
+	"description": "PHP User-agent generator",
+	"homepage":    "https://github.com/asinka-studio/php-user-agent-generator",
+	"version":     "0.0.2",
+	"authors":     [
 		{
 			"name":  "Alexey S. Mikhaltsov",
 			"email": "aalexey@asinka.ru"
 		}
 	],
-	"autoload":     {
+	"autoload":    {
 		"psr-4": {
 			"Asinka\\": "src/"
 		}
